--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -16,6 +16,7 @@
     "com.unity.visualscripting": "1.9.5",
     "com.unity.xr.management": "4.5.0",
     "com.unity.xr.oculus": "4.5.0",
+    "de.sungaila.pdftoimage": "https://github.com/sungaila/PDFtoImage.git?path=etc/UnityPackage",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
